--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "qs": "^6.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
