--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,12 +29,13 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "next": "14.2.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
